# silent_majority

./: .travis.yml  README.md  appveyor.yml
src/: CMakeLists.txt  Makefile  color.hpp  common.hpp  evalList.hpp  evaluate.cpp  evaluate.hpp  generateMoves.hpp  ifdef.hpp  init.cpp  move.hpp  movePicker.cpp  movePicker.hpp  position.cpp  position.hpp  score.hpp  search.cpp  search.hpp  search_params.hpp  thread.cpp  thread.hpp  tt.cpp  tt.hpp  usi.cpp
src/YaneuraOu/: config.h  evaluate.h  misc.cpp  misc.h  movepick.h  types.h
src/YaneuraOu/eval/: evaluate_bona_piece.cpp
src/YaneuraOu/eval/nnue/: evaluate_nnue.cpp  nnue_architecture.h  nnue_test_command.cpp
src/YaneuraOu/eval/nnue/features/: feature_set.h  half_kp.cpp  half_kp_gameply40x4.cpp  half_kpkfile.cpp  index_list.h  kk.cpp  pp.cpp
src/YaneuraOu/extra/: macros.h
tests/: all.sh  benchmark.sh  moves.sh  progress.bin.sample
